# mcp-composer

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  pytest.ini  simple_test.py
.github/: copilot-instructions.md
.github/prompts/: Add Configuration Option.prompt.md  Add Frontend Feature.prompt.md  Add MCP Server Integration.prompt.md  Create New API Endpoint.prompt.md  Debug MCP Connection Issues.prompt.md
charts/mcp-composer/: .helmignore  Chart.yaml  values.yaml
charts/mcp-composer/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
scripts/: test-health-checks.sh
src/: __init__.py  api.py  composer.py  config.py  config_manager.py  downstream_controller.py  gateway.py  main.py
src/domain/: mcp_models.py  server_kit.py
src/ui/: index.html
tests/: __init__.py  conftest.py  test_basic.py
tests/fixtures/: test_mcp_servers.json
tests/integration/: test_api.py  test_health_endpoints.py
tests/unit/: test_api_gateways.py  test_api_health_errors.py  test_api_liveness_errors.py  test_api_mcp_servers.py  test_api_server_kits.py  test_api_simple_coverage.py  test_composer.py  test_config.py  test_config_manager.py  test_downstream_controller.py  test_downstream_server.py  test_gateway.py  test_server_kit.py  test_simple.py
